# Claude-Cli-Helper

./: .gitignore  CLAUDE.md  README.md  README.vi.md  pyproject.toml
src/claude_cli_helper/: __init__.py  cli.py  config.py  models.py  settings_manager.py
src/claude_cli_helper/commands/: backup.py  config.py  doctor.py  env.py  hooks.py  mcp.py  profile.py  settings.py  setup.py
src/claude_cli_helper/templates/: __init__.py  profiles.py
tests/: __init__.py  test_config.py  test_models.py
