[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-cli-helper"
version = "0.1.0"
description = "CLI tool để thiết lập và quản lý Claude Code settings nhanh hơn"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "thedangcoder" }
]
keywords = ["claude", "cli", "settings", "mcp", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
claude-helper = "claude_cli_helper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_cli_helper"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
